my first commit

--- a/site.html
+++ b/site.html
@@ -18,19 +18,17 @@
 		<img class="center" src="logo2.webp">
 		<link rel="stylesheet" type="text/css" href="">
 	</div>
-
-<div class="searchbar">
+<section>
+<div class="container">
 	<input class="search" type="text" name="search">
 </div>
-
-	<div class="container">
-		<button>
+			<button>
 			<p>Google search</p>
 		</button>
 		<button>
 			<p>I'm feeling lucky</p>
 		</button>
-	</div>
+</section>
 
 	<div class="container-2">
 		<p>Offered in the:  <a href=""> Hausa</a> <a href=""> Igbo</a> <a href="">Èdè Yorùbá </a> <a href=""> Nigerian Pidgin</a></p>
