--- a/site.html
+++ b/site.html
@@ -5,49 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Google</title>
 	<link rel="stylesheet" href="style.css">
+	<<script src="https://kit.fontawesome.com/9785a352a5.js" crossorigin="anonymous"></script>
 </head>
 <body>
+	<header>
 	<div class="navbar">
   <a class="active" href="#"> Gmail</a>
   <a class="active" href="#"></i> Images</a>
-  <a class="active" href="#"><i class=""></i> Google app</a>
-  <a class="active" href="#"><i class=""></i> Google account</a>
+  <a class="fa-solid fas fa-align-justify" style="font-size:20px;color: black" href="#"><i class=""></i></a>
+  <a class="fa-solid fas fa-user" style="font-size:20px;color: black" href="#"><i class=""></i></a>
 </div>
+</header>
+
+<div class="body-section">
 
 	<div class="logo">
 		<img class="center" src="logo2.webp">
 		<link rel="stylesheet" type="text/css" href="">
 	</div>
-<section>
-<div class="container">
+
+<section id="info">
+	<div class="container">
+		<div class="SB">
+		<form>
+		<button type="submit"><i class="fas fa-search"></i></button>
 	<input class="search" type="text" name="search">
-</div>
-			<button>
-			<p>Google search</p>
+	<button type="submit"><i class="fas fa-microphone"></i></button>
+	</form>
+	</div>
+	<div class="second">
+			<button class="button">
+			<a class="button" href="#">Google Search</a>
 		</button>
-		<button>
-			<p>I'm feeling lucky</p>
+		<button class="button">
+			<a class="button" href="#">Google Search</a>
 		</button>
+		</div>
+		</div>
 </section>
 
-	<div class="container-2">
-		<p>Offered in the:  <a href=""> Hausa</a> <a href=""> Igbo</a> <a href="">Èdè Yorùbá </a> <a href=""> Nigerian Pidgin</a></p>
+	<section id="note">
+		<p>Offered in the: <a class="lang" href="">Hausa</a> <a class="lang" href="">Igbo</a> <a class="lang" href="">Èdè Yorùbá</a> <a class="lang" href="">Nigerian Pidgin</a></span></p>
+	</section>
 	</div>
 
+<section id="footer">
 	<footer>
-		<div class="footer">
+		<div>
 			<section class="F1">
 				<p>Nigeria</p>
 			</section>
-			<section class="F2">
-				<p>
-					<span><a href="">About</a> <a href="">Advertising</a> <a href="">Business</a> <a href="">How search works</a></span>
-					<span><a href="">Carbon neutral since 2007</a></span>
-					<span><a href="">Terms</a> <a href="">Privacy</a> <a href="">Settings</a></span>
-				</p>
+
+
+			<section class="links">
+					<a href="">About</a> <a href="">Advertising</a> <a href="">Business</a> <a href="">How search works</a>
+					<a href="">Carbon neutral since 2007</a>
+					<a href="">Terms</a> <a href="">Privacy</a> <a href="">Settings</a>
 			</section>
 		</div>
 	</footer>
+</section>	
 
 </body>
 </html>
